Fix overflow degli sfondi delle sezioni

--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body {
 /*** SECTION ***/
 section {
     position: relative;
-    overflow: hidden;
+
 }
 section .sec-img {
     position: absolute;
@@ -336,6 +336,7 @@ section .sec-textblock {
 #vantaggi {
     padding-top: 60px;
     padding-bottom: 100px;
+    overflow-x: hidden;
 }
 #vantaggi .sec-body {
     padding: 30px 0;
